--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,3 +10,4 @@
 @import url('./hero.css');
 @import url('./footer.css');
 @import url('./modalCokctails.css');
+@import url('./cocktailsMarckup.css')
