--- a/src/partials/components/header/header.html
+++ b/src/partials/components/header/header.html
@@ -1,12 +1,11 @@
-
 <header id="home" class="page-header">
   <div class="container page-header-container">
-    <a class="header-logo link" href=""
-      >DRINKIFY
-      <svg class="header-logo-icon" width="24" height="24">
-        <use href="./img/icons.svg#icon-chocolate-logo"></use>
-      </svg>
-    </a>
+    <a class="footer-logo" href="./index.html"
+        ><span class="footer-logo-span">Drinkify</span
+        ><svg class="icon-logo" >
+          <use href="./img/sprite.svg#icon-cocktail"></use>
+        </svg>
+      </a>
     <nav class="header-menu-desktop">
       <ul class="header-menu-list list">
         <li class="header-menu-item">
@@ -54,16 +53,24 @@
     </ul>
     <button type="button" class="header-menu-btn js-open-menu">
       <svg class="header-menu-btn-icon" width="28" height="28">
-        <use href="./img/icons.svg#icon-menu-mobile"></use>
+        <use href="./img/sprite.svg#icon-align-justify"></use>
       </svg>
     </button>
   </div>
-  <div class="header-mobile-menu js-menu-container">
+  
+  <div class="page-header page-header-container header-mobile-menu js-menu-container">
+    <a class="footer-logo" href="./index.html"
+        ><span class="footer-logo-span">Drinkify</span
+        ><svg class="icon-logo-white" >
+          <use href="./img/sprite.svg#icon-cocktail"></use>
+        </svg>
+      </a>
     <button type="button" class="mobile-menu-close-btn js-close-menu">
       <svg class="mobile-menu-close-icon" width="" height="">
-        <use href="./img/icons.svg#icon-close"></use>
+        <use href="./img/sprite.svg#icon-x"></use>
       </svg>
     </button>
+    
     <ul class="header-mobile-menu-list list">
       <li class="header-mobile-menu-item">
         <a href="#home" class="header-mobile-menu-link link">Home</a>
