--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,6 @@
 @import url('./reset.css');
 @import url('./base.css');
 @import url('./header.css');
-@import url('./hero.css');
+@import url('./hero/hero.css');
 @import url('./footer.css');
 @import url('./modalCokctails.css');
