--- a/src/partials/components/cocktailsMarkUp/cocktailsMarkUp.html
+++ b/src/partials/components/cocktailsMarkUp/cocktailsMarkUp.html
@@ -1,1 +1,4 @@
-<h1></h1>
+<section class="section">
+    <h1>Cocktails</h1>   
+    <div class="container" id="cocktail-container"></div>
+   </section>
