--- a/src/partials/components/modalCocktails/modalCocktails.html
+++ b/src/partials/components/modalCocktails/modalCocktails.html
@@ -6,8 +6,8 @@
       data-modal-close
       aria-label="close"
     >
-      <svg class="modal__icon" width="24" height="24">
-        <use href="./img/sprite.svg#icon-x"></use>
+      <svg class="modal__icon" width="" height="">
+        <use href="./img/sprite.svg#icon-close"></use>
       </svg>
     </button>
     <div class="modal-cocktail__content"></div>
