--- a/src/css/header.css
+++ b/src/css/header.css
@@ -20,7 +20,7 @@
   color: #747bff;
 } */
 
-.footer-logo-span {
+.header-logo-span {
   color: #000000;
   font-family: Poppins;
   font-size: 16px;
@@ -30,10 +30,16 @@
   letter-spacing: -0.16px;
   text-transform: uppercase;
 }
-.icon-logo{
+.header-logo {
+    display: flex;
+    gap: 4px;}
+.header-icon-logo{
     width: 21px;
     height: 18px;
     fill: #9CDFDF;
+}
+.logo-white{
+  fill: black;
 }
 .page-header {
   padding-top: 20px;
@@ -53,27 +59,12 @@
   justify-content: space-between;
   align-items: center;
 }
-.header-logo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  column-gap: 4px;
-  font-style: italic;
-  font-weight: 700;
-  line-height: 1.29;
-  letter-spacing: -0.03em;
-  color: #111111;
-}
+
 .header-logo-icon {
   --color1: #000000;
 }
-.headre-logo-span {
-  font-style: normal;
-}
+
 .header-menu-desktop {
-  display: none;
-}
-.header-list-social {
   display: none;
 }
 .header-menu-btn {
@@ -92,15 +83,11 @@ fill:#000000;
   position: fixed;
   top: 0;
   right: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   width: 100%;
   height: 100%;
   background: #7E8FDD;
   transform: translateX(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -135,14 +122,14 @@ fill:#000000;
 .mobile-menu-close-btn:focus {
   fill: #fd9222;
 }
-.header-mobile-menu-list {
+/* .header-mobile-menu-list {
   padding-top: 136px;
   padding-right: 46px;
   padding-left: 50px;
   display: flex;
   flex-direction: column;
   row-gap: 24px;
-}
+} */
 
 .header-mobile-menu-link {
   font-weight: 500;
@@ -161,6 +148,10 @@ fill:#000000;
     width: 32px;
     height: 32px;
   }
+  .header-logo-span {
+  font-size: 22px;
+  
+}
   .mobile-menu-close-btn {
     top: 24px;
     right: 32px;
