--- a/src/partials/components/header/header.html
+++ b/src/partials/components/header/header.html
@@ -1,56 +1,14 @@
 <header id="home" class="page-header">
   <div class="container page-header-container">
-    <a class="footer-logo" href="./index.html"
-        ><span class="footer-logo-span">Drinkify</span
-        ><svg class="icon-logo" >
+    <a class="header-logo" href="./index.html"
+        ><span class="header-logo-span">Drinkify</span
+        ><svg class="header-icon-logo" >
           <use href="./img/sprite.svg#icon-cocktail"></use>
         </svg>
       </a>
     <nav class="header-menu-desktop">
-      <ul class="header-menu-list list">
-        <li class="header-menu-item">
-          <a href="#home" class="header-menu-link current link">Home</a>
-        </li>
-        <li class="header-menu-item">
-          <a href="#made" class="header-menu-link link">How it's made?</a>
-        </li>
-        <li class="header-menu-item">
-          <a href="#product" class="header-menu-link link">Our products</a>
-        </li>
-        <li class="header-menu-item">
-          <a href="#sellers" class="header-menu-link link">Top sellers</a>
-        </li>
-        <li class="header-menu-item">
-          <a href="#chocolate-is-loved" class="header-menu-link link"
-            >Chocolate is loved</a
-          >
-        </li>
-      </ul>
     </nav>
-    <ul class="header-list-social list">
-      <li class="header-item-social">
-        <a
-          class="header-social-link link"
-          href="https://www.instagram.com/"
-          target="_blank"
-          rel="noreferrer noopener"
-          ><svg class="header-menu-social-icon" width="24" height="24">
-            <use href="./img/icons.svg#icon-instagram"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="header-item-social">
-        <a
-          class="header-social-link link"
-          href="https://twitter.com/"
-          target="_blank"
-          rel="noreferrer noopener"
-          ><svg class="header-menu-social-icon" width="24" height="24">
-            <use href="./img/icons.svg#icon-twitter"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
+   
     <button type="button" class="header-menu-btn js-open-menu">
       <svg class="header-menu-btn-icon" width="28" height="28">
         <use href="./img/sprite.svg#icon-align-justify"></use>
@@ -58,15 +16,15 @@
     </button>
   </div>
   
-  <div class="page-header page-header-container header-mobile-menu js-menu-container">
-    <a class="footer-logo" href="./index.html"
-        ><span class="footer-logo-span">Drinkify</span
-        ><svg class="icon-logo-white" >
+  <div class="page-header header-mobile-menu js-menu-container">
+   <a class="header-logo" href="./index.html"
+        ><span class="header-logo-span">Drinkify</span
+        ><svg class="icon-logo" >
           <use href="./img/sprite.svg#icon-cocktail"></use>
         </svg>
       </a>
     <button type="button" class="mobile-menu-close-btn js-close-menu">
-      <svg class="mobile-menu-close-icon" width="" height="">
+      <svg class="mobile-menu-close-icon" width="18" height="18">
         <use href="./img/sprite.svg#icon-x"></use>
       </svg>
     </button>
@@ -80,30 +38,7 @@
       </li>
       
     </ul>
-    <ul class="header-mobile-menu-list-social list">
-      <li class="header-mobile-menu-item-social">
-        <a
-          class="header-mobile-menu-social-link link"
-          href="https://www.instagram.com/"
-          target="_blank"
-          rel="noreferrer noopener"
-          ><svg class="header-menu-social-icon" width="20" height="20">
-            <use href="./img/icons.svg#icon-instagram"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="header-mobile-menu-item">
-        <a
-          class="header-mobile-menu-social-link link"
-          href="https://twitter.com/"
-          target="_blank"
-          rel="noreferrer noopener"
-          ><svg class="header-menu-social-icon" width="22" height="22">
-            <use href="./img/icons.svg#icon-twitter"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
+  
   </div>
   <script src="src/main.js"></script>
 </header>
