--- a/src/partials/hero/search-hero.html
+++ b/src/partials/hero/search-hero.html
@@ -1,5 +1,5 @@
-<section class="js-keyboard">
-  <div id="keyboard"></div>
+<section>
+  <div class="js-keyboard" id="keyboard"></div>
   <form class="search-form">
     <div class="search-input-block">
       <input
