--- a/src/css/header.css
+++ b/src/css/header.css
@@ -19,7 +19,9 @@
 .nav-link:focus {
   color: #747bff;
 } */
-
+.header-menu{
+  display: none;
+}
 .header-logo-span {
   color: #000000;
   font-family: Poppins;
@@ -32,14 +34,15 @@
 }
 .header-logo {
     display: flex;
-    gap: 4px;}
+    gap: 4px;
+  }
 .header-icon-logo{
     width: 21px;
     height: 18px;
-    fill: #9CDFDF;
+    fill: #7E8FDD;
 }
-.logo-white{
-  fill: black;
+.icon-logo-w{
+  fill: #9CDFDF;
 }
 .page-header {
   padding-top: 20px;
@@ -64,9 +67,7 @@
   --color1: #000000;
 }
 
-.header-menu-desktop {
-  display: none;
-}
+
 .header-menu-btn {
   border: none;
   background-color: transparent;
@@ -120,16 +121,14 @@ fill:#000000;
 }
 .mobile-menu-close-btn:hover,
 .mobile-menu-close-btn:focus {
-  fill: #fd9222;
+  fill: #000000;
 }
-/* .header-mobile-menu-list {
-  padding-top: 136px;
+.header-mobile-menu-list {
+  
   padding-right: 46px;
   padding-left: 50px;
-  display: flex;
-  flex-direction: column;
   row-gap: 24px;
-} */
+}
 
 .header-mobile-menu-link {
   font-weight: 500;
@@ -141,7 +140,7 @@ fill:#000000;
 }
 .header-mobile-menu-link:hover,
 .header-mobile-menu-link:focus {
-  color: #fd9222;
+  color: #000000;
 }
 @media screen and (min-width: 768px) {
   .header-menu-btn-icon {
@@ -169,6 +168,13 @@ fill:#000000;
   .header-mobile-menu {
     width: 290px;
   }
+  .header-mobile-menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;}
+  
 }
 .header-mobile-menu-list-social {
   position: absolute;
@@ -186,10 +192,7 @@ fill:#000000;
   fill: #ffffff;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-mobile-menu-social-link:hover,
-.header-mobile-menu-social-link:focus {
-  fill: #fd9222;
-}
+
 @media screen and (min-width: 768px) {
   .header-menu-social-icon {
     width: 24px;
@@ -198,6 +201,9 @@ fill:#000000;
 }
 /* desktop */
 @media screen and (min-width: 1200px) {
+  .header-menu{
+  display: block;
+}
   .header-logo {
     font-size: 18px;
     line-height: 1.11;
@@ -228,10 +234,7 @@ fill:#000000;
     align-items: center;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .header-social-link:hover,
-  .header-social-link:focus {
-    fill: #fd9222;
-  }
+
   .header-menu-link {
     font-weight: 500;
     font-size: 14px;
@@ -242,6 +245,6 @@ fill:#000000;
   }
   .header-menu-link:hover,
   .header-menu-link:focus {
-    color: #fd9222;
+    color: #0c0c0c;
   }
 }
