--- a/src/partials/hero/hero.html
+++ b/src/partials/hero/hero.html
@@ -1,1 +1,51 @@
+<section class="container hero-title-img">
+  <div class="hero-title-btn">
+    <h1 class="title-hero">
+      A party without <span class="title-hero-span">cocktails</span> is not like
+      a party
+    </h1>
+    <p class="hero-text">
+      From classic sips to exotic mixes, we're your key to becoming a cocktail
+      wizard!
+    </p>
+    <load
+      src="../components/btn.html"
+      text="View cocktails"
+      class="btn-hero-scroll"
+    />
+  </div>
+  <div class="hero-img">
+    <div class="title-img">
+      <div class="container-img">
+        <div class="rectangle"></div>
+        <picture class="girl-img-hero">
+          <source
+            srcset="
+              ../../img/hero/girl-desktop.png    1x,
+              ../../img/hero/girl-desktop@2x.png 2x
+            "
+            media="(min-width:1280px)"
+          />
+          <source
+            srcset="
+              ../../img/hero/girl-tablet.png    1x,
+              ../../img/hero/girl-tablet@2x.png 2x
+            "
+            media="(min-width:768px)"
+          />
+          <source
+            srcset="
+              ../../img/hero/girl-mobile.png    1x,
+              ../../img/hero/girl-mobile@2x.png 2x
+            "
+            media="(max-width:767.9px)"
+          />
+
+          <img src="../../img/hero/girl-mobile.png" alt="girl with cocktail" />
+        </picture>
+      </div>
+    </div>
+    <p class="hero-text img-text">Search your favorite cocktail by ABC</p>
+  </div>
+</section>
 <load src="./search-hero.html" />
