--- a/src/partials/header/header.html
+++ b/src/partials/header/header.html
@@ -3,10 +3,10 @@
   <div class="header-menu">
    <ul class="header-mobile-menu-list list">
       <li class="header-mobile-menu-item">
-        <a href="#home" class="header-mobile-menu-link link">Home</a>
+        <a href="" class="header-mobile-menu-link link">Home</a>
       </li>
       <li class="header-mobile-menu-item">
-        <a href="#made" class="header-mobile-menu-link link">Favorite</a>
+        <a href="" class="header-mobile-menu-link link">Favorite</a>
       </li>
     
     </ul>
@@ -49,26 +49,25 @@
     
     <ul class="header-mobile-menu-list list">
       <li class="header-mobile-menu-item">
-        <a href="#home" class="header-mobile-menu-link link">Home</a>
+        <a href="" class="header-mobile-menu-link link">Home</a>
       </li>
       <li class="header-mobile-menu-item">
-        <a href="#made" class="header-mobile-menu-link link">Favorite</a>
+        <a href="" class="header-mobile-menu-link link">Favorite</a>
       </li>
       
     </ul>
+    <!-- <ul>
     <li>
-       <a class="" href="./favCocktails.html"
+       <a class="sdd" href="./favCocktails.html"
         ><span class="">Favorite cocktails</span
         >
         
     </li>
     <li>
-      <a class="" href="./ingredients.html"
+      <a class="rt" href="./ingredients.html"
         ><span class="">Favorite ingredients</span
         >
-    </li>
-  <ul>
-
+    </li> -->
   </ul>
   </div>
   <script src="src/main.js"></script>
