--- a/src/partials/hero/hero.html
+++ b/src/partials/hero/hero.html
@@ -21,27 +21,27 @@
         <picture class="girl-img-hero">
           <source
             srcset="
-              ../../img/hero/girl-desktop.png    1x,
-              ../../img/hero/girl-desktop@2x.png 2x
+              ./img/hero/girl-desktop.png    1x,
+              ./img/hero/girl-desktop@2x.png 2x
             "
             media="(min-width:1280px)"
           />
           <source
             srcset="
-              ../../img/hero/girl-tablet.png    1x,
-              ../../img/hero/girl-tablet@2x.png 2x
+              ./img/hero/girl-tablet.png    1x,
+              ./img/hero/girl-tablet@2x.png 2x
             "
             media="(min-width:768px)"
           />
           <source
             srcset="
-              ../../img/hero/girl-mobile.png    1x,
-              ../../img/hero/girl-mobile@2x.png 2x
+              ./img/hero/girl-mobile.png    1x,
+              ./img/hero/girl-mobile@2x.png 2x
             "
             media="(max-width:767.9px)"
           />
 
-          <img src="../../img/hero/girl-mobile.png" alt="girl with cocktail" />
+          <img src="./img/hero/girl-mobile.png" alt="girl with cocktail" />
         </picture>
       </div>
     </div>
