--- a/src/css/cocktailsMarckup.css
+++ b/src/css/cocktailsMarckup.css
@@ -1,18 +1,99 @@
+.cocktail-list{
+ margin-bottom: 40px;
+}
+
+.main-title{
+  font-weight: medium;
+  font-size: 28px;
+  line-height: 1.11;
+  letter-spacing: 0%;
+  color: #242424;
+  text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  margin-top: 40px;
+  margin-left: 20px;
+  margin-bottom: 40px;
+}
+.cocktail-card{
+  background-color: var(--light-letters-color);
+  border-radius: 10px;
+  padding: 14px 14px 0 14px;
+}
+.cocktail-card:not(:last-child) {
+  margin-bottom: 20px;
+}
 .cocktail-card img {
     width: 100%;
     height: auto;
-    padding: 14px 14px 0 14px;
-    margin-bottom: 20px;
+    border: none;
+    border-radius: 10px;  
   }
-  
   .cocktail-title {
+   margin-top: 20px;
    margin-bottom: 14px;
   }
   
   .cocktail-description {
-    max-width: 295px; 
+    max-height: 40px; 
     overflow: hidden;
     text-overflow: ellipsis; 
     white-space: nowrap; 
     margin-bottom: 20px;
   }
+  .cocktail-item-container{
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-bottom: 20px;
+    display: flex;
+    gap: 15px;
+  }
+  /* .card-button-learn-more{
+    font-family: inherit;
+    font-weight: 600;
+    font-size: 24px;
+    letter-spacing: 2%;
+    color: var(--dark-letters-color);
+    background-color: transparent;
+    min-width: 232px;
+    min-height: 48px;
+    border-color: var(--main-color);
+    border-radius: 8px;
+    text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    transition: color 250ms cubic-bezier(0, 0.17, 0.2, 0.88),
+    background-color 250ms cubic-bezier(0, 0.17, 0.2, 0.88),
+    border-color 250ms cubic-bezier(0, 0.17, 0.2, 0.88), 
+    box-shadow cubic-bezier(0, 0.17, 0.2, 0.88);
+}
+.card-svg-heart{
+  padding: 16px;
+  border-radius: 8px;
+  background-color: var(--main-color);
+  border: none;
+  min-width: 56px;
+  min-height: 56px;
+} */
+  @media screen and (min-width: 768px){
+    .cocktails-list {
+      display: flex;
+      flex-wrap: wrap;
+      column-gap: 16px;
+      row-gap: 32px;
+      margin-bottom: 44px;
+    }
+    .cocktail-card:not(:last-child) {
+      margin-bottom: 0;
+    }
+    .cocktail-card{
+      width: calc((100% - 32px) / 2);
+    }
+  }
+
+  @media screen and (min-width: 1280px) {
+    .cocktails-list {
+      column-gap: 24px;
+      row-gap: 44px;
+    }
+    .cocktail-card {
+      width: calc((100% - 48px) / 3);
+    }
+  }
+
