--- a/src/partials/cocktailsMarkUp/cocktailsMarkUp.html
+++ b/src/partials/cocktailsMarkUp/cocktailsMarkUp.html
@@ -1,6 +1,8 @@
 
-<section class="section">
-    <h1>Cocktails</h1>   
-    <div class="container" id="cocktail-container"></div>
+<section class="">
+    <h1 class="main-title">Cocktails</h1>   
+    <div class="container" >
+        <ul class="js__cocktails__list cocktails-list"></ul>
+    </div>
    </section>
 
