--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,3 +11,4 @@
 @import url('./footer.css');
 @import url('./modalCokctails.css');
 @import url('./cocktailsMarckup.css');
+@import url('./favCocktails.css');
