initial markup of files

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,4 +10,5 @@
 @import url('./hero/hero.css');
 @import url('./footer.css');
 @import url('./modalCokctails.css');
+@import url('./modalIngredients.css');
 @import url('./cocktailsMarckup.css');
