--- a/src/partials/modalCocktails/modalCocktails.html
+++ b/src/partials/modalCocktails/modalCocktails.html
@@ -11,5 +11,6 @@
       </svg>
     </button>
     <div class="modal-cocktail__content"></div>
+    <div class="modal-ingredients__content"></div>
   </div>
 </div>
