--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,3 +12,4 @@
 @import url('./modalCokctails.css');
 @import url('./modalIngredients.css');
 @import url('./cocktailsMarckup.css');
+@import url('./favCocktails.css');
