--- a/src/css/cocktailsMarckup.css
+++ b/src/css/cocktailsMarckup.css
@@ -1,99 +1,200 @@
-.cocktail-list{
+/* .cocktail-list{
  margin-bottom: 40px;
-}
+} */
 
-.main-title{
-  font-weight: medium;
-  font-size: 28px;
-  line-height: 1.11;
-  letter-spacing: 0%;
-  color: #242424;
-  text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+.main-title {
+  color: var(--dark-letters-color);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-family: Poppins;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.16;
+
   margin-top: 40px;
   margin-left: 20px;
   margin-bottom: 40px;
 }
-.cocktail-card{
+/* Card  */
+.cocktail-card {
   background-color: var(--light-letters-color);
-  border-radius: 10px;
-  padding: 14px 14px 0 14px;
+  border-radius: 20px;
+  padding-top: 14px;
 }
 .cocktail-card:not(:last-child) {
   margin-bottom: 20px;
 }
 .cocktail-card img {
-    width: 100%;
-    height: auto;
-    border: none;
-    border-radius: 10px;  
-  }
-  .cocktail-title {
-   margin-top: 20px;
-   margin-bottom: 14px;
-  }
-  
-  .cocktail-description {
-    max-height: 40px; 
-    overflow: hidden;
-    text-overflow: ellipsis; 
-    white-space: nowrap; 
-    margin-bottom: 20px;
-  }
-  .cocktail-item-container{
-    margin-left: 20px;
-    margin-right: 20px;
-    padding-bottom: 20px;
-    display: flex;
-    gap: 15px;
-  }
-  /* .card-button-learn-more{
-    font-family: inherit;
-    font-weight: 600;
-    font-size: 24px;
-    letter-spacing: 2%;
-    color: var(--dark-letters-color);
-    background-color: transparent;
-    min-width: 232px;
-    min-height: 48px;
-    border-color: var(--main-color);
-    border-radius: 8px;
-    text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    transition: color 250ms cubic-bezier(0, 0.17, 0.2, 0.88),
-    background-color 250ms cubic-bezier(0, 0.17, 0.2, 0.88),
-    border-color 250ms cubic-bezier(0, 0.17, 0.2, 0.88), 
-    box-shadow cubic-bezier(0, 0.17, 0.2, 0.88);
+  width: 100%;
+  height: auto;
+  padding-left: 14px;
+  padding-right: 14px;
+  border-radius: 20px;
+  background: var(--light-letters-color);
+  box-shadow: 0px 4px 46px 0px rgba(0, 0, 0, 0.05);
 }
-.card-svg-heart{
-  padding: 16px;
-  border-radius: 8px;
+.cocktail-card h2{
+  padding-left: 24px;
+}
+.cocktail-card p{
+  padding-left: 24px;
+}
+/* Dscription  */
+
+.cocktail-title {
+  color: var(--dark-letters-color);
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.33;
+
+  margin-top: 20px;
+  margin-bottom: 14px;
+}
+
+.cocktail-description {
+  overflow: hidden;
+  color: var(--dark-letters-color);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-height: 54px;
+  max-width: 295px;
+
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  line-height: 1.28;
+
+}
+/* Buttons  */
+.cocktail-button-container {
+  margin-top: 20px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.card-button-learn-more {
+
+  padding: 12px 30px;
+
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 1.42;
+  color: var(--dark-letters-color);
+
+  background-color: transparent;
+  text-transform: uppercase;
+  min-width: 200px;
+  min-height: 40px;
+
+  border-radius: 12px;
+  border: 1px solid var(--main-color);
+
+  transition: color 250ms cubic-bezier(0, 0.17, 0.2, 0.88),
+    background-color 250ms cubic-bezier(0, 0.17, 0.2, 0.88),
+    border-color 250ms cubic-bezier(0, 0.17, 0.2, 0.88);
+}
+
+.card-button-learn-more:hover,
+.card-button-learn-more:focus{
+  background-color: var(--main-color);
+  color: var(--light-letters-color);
+}
+.button-svg-heart{
+  fill: var(--light-letters-color);
+ 
+}
+.button-svg-heart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+
+  border-radius: 12px;
   background-color: var(--main-color);
   border: none;
-  min-width: 56px;
-  min-height: 56px;
-} */
-  @media screen and (min-width: 768px){
-    .cocktails-list {
-      display: flex;
-      flex-wrap: wrap;
-      column-gap: 16px;
-      row-gap: 32px;
-      margin-bottom: 44px;
-    }
-    .cocktail-card:not(:last-child) {
-      margin-bottom: 0;
-    }
-    .cocktail-card{
-      width: calc((100% - 32px) / 2);
-    }
+  min-width: 43px;
+  min-height: 43px;
+}
+.icon-heart {
+  width: 18px;
+  height: 18px;
+  flex-shrink: 0;
+}
+@media screen and (min-width: 375px){
+  .card-button-learn-more {
+    font-size: 14px;
+    padding: 14px 71px;
+  
+    min-width: 232px;
+    min-height: 48px;
   }
-
-  @media screen and (min-width: 1280px) {
-    .cocktails-list {
-      column-gap: 24px;
-      row-gap: 44px;
-    }
-    .cocktail-card {
-      width: calc((100% - 48px) / 3);
-    }
+  .button-svg-heart {
+    min-width: 48px;
+    min-height: 48px;
   }
+}
+@media screen and (min-width: 768px) {
+  .cocktails-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 16px;
+    row-gap: 32px;
+    margin-bottom: 44px;
+  }
+  .cocktail-card:not(:last-child) {
+    margin-bottom: 0;
+  }
+  .cocktail-card {
+    width: calc((100% - 32px) / 2);
+  }
+  .main-title {
+    font-size: 40px;
+    margin-top: 50px;
+    margin-left: 32px;
+    margin-bottom: 54px;
+  }
+  .cocktail-title {
+    font-size: 20px;
+    line-height: 1.2;
 
+    margin-top: 24px;
+  }
+  .card-button-learn-more {
+    white-space: nowrap;
+    font-size: 18px;
+    padding: 16px 55px;
+  
+    min-width: 255px;
+    min-height: 56px;
+  }
+  .button-svg-heart {
+    min-width: 56px;
+    min-height: 56px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .cocktails-list {
+    column-gap: 24px;
+    row-gap: 44px;
+  }
+  .cocktail-card {
+    width: calc((100% - 48px) / 3);
+  }
+  .main-title {
+    margin-top: 50px;
+    margin-left: 100px;
+    margin-bottom: 58px;
+  }
+  .card-button-learn-more {
+    min-width: 225px;
+  }
+}
