--- a/src/css/cocktailsMarckup.css
+++ b/src/css/cocktailsMarckup.css
@@ -34,10 +34,12 @@
   box-shadow: 0px 4px 46px 0px rgba(0, 0, 0, 0.05);
 }
 .cocktail-card h2{
-  padding-left: 24px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .cocktail-card p{
-  padding-left: 24px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 /* Dscription  */
 
@@ -54,14 +56,15 @@
 }
 
 .cocktail-description {
-  overflow: hidden;
   color: var(--dark-letters-color);
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  max-height: 54px;
-  max-width: 295px;
+ 
+  height: auto; 
+  display: -webkit-box;
+  -webkit-line-clamp: 3; 
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 
-  font-family: Poppins;
+  font-family: inherit;
   font-size: 14px;
   font-style: normal;
   line-height: 1.28;
@@ -69,10 +72,7 @@
 }
 /* Buttons  */
 .cocktail-button-container {
-  margin-top: 20px;
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-bottom: 20px;
+  padding: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -128,7 +128,9 @@
   height: 18px;
   flex-shrink: 0;
 }
+      /* 375 */
 @media screen and (min-width: 375px){
+  
   .card-button-learn-more {
     font-size: 14px;
     padding: 14px 71px;
@@ -141,6 +143,7 @@
     min-height: 48px;
   }
 }
+    /* 768 */
 @media screen and (min-width: 768px) {
   .cocktails-list {
     display: flex;
@@ -161,18 +164,31 @@
     margin-left: 32px;
     margin-bottom: 54px;
   }
+  .cocktail-button-container {
+    padding: 24px;
+  }
   .cocktail-title {
     font-size: 20px;
     line-height: 1.2;
 
+    padding-left: 24px;
+    padding-right: 24px;
     margin-top: 24px;
   }
+  .cocktail-card h2{
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+  .cocktail-card p{
+    padding-left: 24px;
+    padding-right: 24px;
+  }
   .card-button-learn-more {
-    white-space: nowrap;
     font-size: 18px;
+    line-height: 1.33;
     padding: 16px 55px;
   
-    min-width: 255px;
+    min-width: 225px;
     min-height: 56px;
   }
   .button-svg-heart {
