--- a/src/partials/hero/hero.html
+++ b/src/partials/hero/hero.html
@@ -43,6 +43,31 @@
 
           <img src="./img/hero/girl-mobile.png" alt="girl with cocktail" />
         </picture>
+        <picture class="elements-img-hero">
+          <source
+            srcset="
+              ./img/hero/elements-desktop.png    1x,
+              ./img/hero/elements-desktop@2x.png 2x
+            "
+            media="(min-width:1280px)"
+          />
+          <source
+            srcset="
+              ./img/hero/elements-tablet.png    1x,
+              ./img/hero/elements-tablet@2x.png 2x
+            "
+            media="(min-width:768px)"
+          />
+          <source
+            srcset="
+              ./img/hero/elements-mobile.png    1x,
+              ./img/hero/elements-mobile@2x.png 2x
+            "
+            media="(max-width:767.9px)"
+          />
+
+          <img src="./img/hero/elements-mobile.png" alt="girl with cocktail" />
+        </picture>
       </div>
     </div>
     <p class="hero-text img-text">Search your favorite cocktail by ABC</p>
