--- a/src/partials/cocktailsMarkUp/cocktailsMarkUp.html
+++ b/src/partials/cocktailsMarkUp/cocktailsMarkUp.html
@@ -1,7 +1,8 @@
 
-<section class="">
-    <h1 class="main-title">Cocktails</h1>   
+<section class="markup__section">
+     
     <div class="container" >
+       <h1 class="main-title">Cocktails</h1>   
         <ul class="js__cocktails__list cocktails-list"></ul>
     </div>
    </section>
