--- a/src/css/cocktailsMarckup.css
+++ b/src/css/cocktailsMarckup.css
@@ -1,6 +1,7 @@
-/* .cocktail-list{
- margin-bottom: 40px;
-} */
+.markup__section{
+  padding-top: 40px ;
+  padding-bottom: 80px;
+}
 
 .main-title {
   color: var(--dark-letters-color);
@@ -11,38 +12,32 @@
   font-weight: 500;
   line-height: 1.16;
 
-  margin-top: 40px;
-  margin-left: 20px;
   margin-bottom: 40px;
 }
 /* Card  */
 .cocktail-card {
   background-color: var(--light-letters-color);
   border-radius: 20px;
-  padding-top: 14px;
+  box-shadow: 0px 4px 46px 0px rgba(0, 0, 0, 0.05);
 }
 .cocktail-card:not(:last-child) {
   margin-bottom: 20px;
 }
 .cocktail-card img {
   width: 100%;
-  height: auto;
+  height: 289px;
+  padding-top: 14px;
   padding-left: 14px;
   padding-right: 14px;
   border-radius: 20px;
   background: var(--light-letters-color);
   box-shadow: 0px 4px 46px 0px rgba(0, 0, 0, 0.05);
 }
-.cocktail-card h2{
-  padding-left: 20px;
-  padding-right: 20px;
-}
-.cocktail-card p{
-  padding-left: 20px;
-  padding-right: 20px;
-}
 /* Dscription  */
-
+.cocktail-description-container{
+  padding: 20px;
+  background-color: var(--light-letters-color);
+}
 .cocktail-title {
   color: var(--dark-letters-color);
   font-family: Poppins;
@@ -51,7 +46,6 @@
   font-weight: 600;
   line-height: 1.33;
 
-  margin-top: 20px;
   margin-bottom: 14px;
 }
 
@@ -69,10 +63,10 @@
   font-style: normal;
   line-height: 1.28;
 
+  margin-bottom: 20px;
 }
 /* Buttons  */
 .cocktail-button-container {
-  padding: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -145,6 +139,10 @@
 }
     /* 768 */
 @media screen and (min-width: 768px) {
+  .markup__section{
+    padding-top: 50px ;
+    padding-bottom: 100px;
+  }
   .cocktails-list {
     display: flex;
     flex-wrap: wrap;
@@ -158,30 +156,19 @@
   .cocktail-card {
     width: calc((100% - 32px) / 2);
   }
+  .cocktail-description-container{
+    padding: 24px;
+  }
   .main-title {
     font-size: 40px;
-    margin-top: 50px;
-    margin-left: 32px;
     margin-bottom: 54px;
-  }
-  .cocktail-button-container {
-    padding: 24px;
   }
   .cocktail-title {
     font-size: 20px;
     line-height: 1.2;
-
-    padding-left: 24px;
-    padding-right: 24px;
-    margin-top: 24px;
   }
-  .cocktail-card h2{
-    padding-left: 24px;
-    padding-right: 24px;
-  }
-  .cocktail-card p{
-    padding-left: 24px;
-    padding-right: 24px;
+  .cocktail-description {
+    margin-bottom: 24px;
   }
   .card-button-learn-more {
     font-size: 18px;
@@ -206,8 +193,6 @@
     width: calc((100% - 48px) / 3);
   }
   .main-title {
-    margin-top: 50px;
-    margin-left: 100px;
     margin-bottom: 58px;
   }
   .card-button-learn-more {
