--- a/src/css/cocktailsMarckup.css
+++ b/src/css/cocktailsMarckup.css
@@ -25,17 +25,18 @@
 }
 .cocktail-card-img{
   width: 100%;
-  height: 289px;
+  height: 257px; 
   padding-top: 14px;
   padding-left: 14px;
   padding-right: 14px;
-  border-radius: 20px;
+  border-radius: 16px;
   background: var(--light-letters-color);
   box-shadow: 0px 4px 46px 0px rgba(0, 0, 0, 0.05);
 }
 /* Dscription  */
 .cocktail-description-container{
-  padding: 20px;
+  padding: 0 20px 20px 20px;
+  margin-top: 20px;
   background-color: var(--light-letters-color);
 }
 .cocktail-title {
@@ -91,9 +92,9 @@
   border-radius: 12px;
   border: 1px solid var(--main-color);
 
-  transition: color 250ms cubic-bezier(0, 0.17, 0.2, 0.88),
-    background-color 250ms cubic-bezier(0, 0.17, 0.2, 0.88),
-    border-color 250ms cubic-bezier(0, 0.17, 0.2, 0.88);
+  transition: color 250ms var(--transition-cubic),
+    background-color 250ms var(--transition-cubic),
+    border-color 250ms var(--transition-cubic);
 }
 
 .card-button-learn-more:hover,
@@ -102,7 +103,8 @@
   color: var(--light-letters-color);
 }
 .button-svg-heart{
-fill: var(--main-color); 
+fill: var(--main-color);
+transition: fill 250ms var(--transition-cubic);
 }
 .button-svg-heart:hover,
 .button-svg-heart:focus{
@@ -160,7 +162,8 @@ fill: var(--main-color);
     width: calc((100% - 32px) / 2);
   }
   .cocktail-description-container{
-    padding: 24px;
+    padding: 0 24px 24px 24px;
+    margin-top: 24px;
   }
   .main-title {
     font-size: 40px;
