--- a/src/partials/hero/search-hero.html
+++ b/src/partials/hero/search-hero.html
@@ -1,5 +1,5 @@
 <section>
-  <select class="hero-mobyle-js" id="keyboard-min"></select>
+  <select class="hero-mobyle-js" id="keyboardmin"></select>
   <div class="js-keyboard" id="keyboard"></div>
   <form class="search-form">
     <div class="search-input-block">
@@ -10,7 +10,7 @@
         id="search"
         placeholder="Search"
         required
-        pattern="[a-zA-Zа-яА-ЯіІїЇґҐєЄʼ]+"
+        pattern="[a-zA-Zа-яА-ЯіІїЇґҐєЄʼ0-9 ]+"
       />
       <div class="container-svg">
         <svg
