--- a/src/css/modalCokctails.css
+++ b/src/css/modalCokctails.css
@@ -9,11 +9,12 @@
 
     transition: all 250ms linear;
 }
-/* .backdrop.is-hidden {
+
+.backdrop.is-hidden {
     pointer-events: all;
     opacity: 1;
     visibility: hidden;
-} */
+}
 
 .modal {
     position: absolute;
