--- a/src/partials/hero/search-hero.html
+++ b/src/partials/hero/search-hero.html
@@ -1,6 +1,49 @@
 <section>
   <select class="hero-mobyle-js" id="keyboardmin"></select>
-  <div class="js-keyboard" id="keyboard"></div>
+  <p class="visually-hidden">
+    Selected option text: <span class="text-output">none</span>
+  <p>
+  
+  <div class="js-keyboard" id="keyboard">
+    <!-- <button type="button" class="keyboard-letter" data="65">A</button>
+    <button type="button" class="keyboard-letter" data="66">B</button>
+    <button type="button" class="keyboard-letter" data="67">C</button>
+    <button type="button" class="keyboard-letter" data="68">D</button>
+    <button type="button" class="keyboard-letter" data="69">E</button>
+    <button type="button" class="keyboard-letter" data="70">F</button>
+    <button type="button" class="keyboard-letter" data="71">G</button>
+    <button type="button" class="keyboard-letter" data="72">H</button>
+    <button type="button" class="keyboard-letter" data="73">I</button
+      <button type="button" class="keyboard-letter" data="74">J</button>
+      <button type="button" class="keyboard-letter" data="75">K</button>
+      <button type="button" class="keyboard-letter" data="76">L</button>
+      <button type="button" class="keyboard-letter" data="77">M</button>
+      <button type="button" class="keyboard-letter" data="78">N</button>
+      <button type="button" class="keyboard-letter" data="79">O</button>
+      <button type="button" class="keyboard-letter" data="80">P</button>
+      <button type="button" class="keyboard-letter" data="81">Q</button>
+      <button type="button" class="keyboard-letter" data="82">R</button>
+      <button type="button" class="keyboard-letter" data="83">S</button>
+      <button type="button" class="keyboard-letter" data="84">T</button>
+      <button type="button" class="keyboard-letter" data="85">U</button>
+      <button type="button" class="keyboard-letter" data="86">V</button>
+      <button type="button" class="keyboard-letter" data="87">W</button>
+      <button type="button" class="keyboard-letter" data="88">X</button>
+      <button type="button" class="keyboard-letter" data="89">Y</button>
+      <button type="button" class="keyboard-letter" data="90">Z</button>
+      <button type="button" class="keyboard-letter" data="49">1</button>
+      <button type="button" class="keyboard-letter" data="50">2</button>
+      <button type="button" class="keyboard-letter" data="51">3</button>
+      <button type="button" class="keyboard-letter" data="52">4</button>
+      <button type="button" class="keyboard-letter" data="53">5</button>
+      <button type="button" class="keyboard-letter" data="54">6</button>
+      <button type="button" class="keyboard-letter" data="55">7</button>
+      <button type="button" class="keyboard-letter" data="56">8</button>
+      <button type="button" class="keyboard-letter" data="57">9</button>
+      <button type="button" class="keyboard-letter" data="48">0</button> -->
+    
+      <input type="text" class="texts-input visually-hidden" />
+    </div>
   <form class="search-form">
     <div class="search-input-block">
       <input
@@ -11,7 +54,9 @@
         placeholder="Search"
         required
         pattern="[a-zA-Zа-яА-ЯіІїЇґҐєЄʼ0-9 ]+"
+        value=""
       />
+      <p class="visually-hidden">Text field value: <span class="output"></span></p>
       <div class="container-svg">
         <svg
           class="input-icon-hero"
