--- a/src/partials/hero/search-hero.html
+++ b/src/partials/hero/search-hero.html
@@ -1,24 +1,12 @@
 <section>
   <select class="hero-mobyle-js" id="keyboardmin"></select>
-  <div class="js-keyboard" id="keyboard"></div>
+  <ul class="js-keyboard" id="keyboard"></ul>
   <form class="search-form">
     <div class="search-input-block">
-      <input
-        type="text"
-        class="search-js"
-        name="search"
-        id="search"
-        placeholder="Search"
-        required
-        pattern="[a-zA-Zа-яА-ЯіІїЇґҐєЄʼ0-9 ]+"
-      />
+      <input type="text" class="search-js" name="search" id="search" placeholder="Search" required
+        pattern="[a-zA-Zа-яА-ЯіІїЇґҐєЄʼ0-9 ]+" />
       <div class="container-svg">
-        <svg
-          class="input-icon-hero"
-          aria-label="icon search"
-          width="16"
-          height="16"
-        >
+        <svg class="input-icon-hero" aria-label="icon search" width="16" height="16">
           <use href="./img/sprite.svg#icon-search"></use>
         </svg>
       </div>
