--- a/src/partials/header/header.html
+++ b/src/partials/header/header.html
@@ -1,21 +1,11 @@
 <header class="page-header contanier">
   
-  <div class="header-menu">
-  
-   
-  <!-- <select onchange="window.location.href=this.options[this.selectedIndex].value">
-    <option VALUE="./favCocktails.html">Favorite</option>
-    <option VALUE="./favCocktails.html">Favorite cocktails</option>
-    <option VALUE="./ingredients.html">Favorite ingredients</option>
-</select> -->
-</div>
+ 
+
   <div class="container page-header-container">
-    <!-- <div class="header-list-menu">
-    <a class="" href="./index.html"
-        ><span class="">Home</span
-        ><a class="" href="./index.html"
-        ><span class="">Favorite</span
-        ></div> -->
+   
+
+         
     <a class="header-logo" href="./index.html"
         ><span class="header-logo-span">Drinkify</span
         ><svg class="header-icon-logo" width="24" height="20" >
@@ -59,34 +49,23 @@
     </button>
     </div>
     </div>
-    <!-- <button type="button" class="mobile-menu-close-btn js-close-menu">
-      <svg class="mobile-menu-close-icon" width="20" height="20">
-        <use href="./img/sprite.svg#icon-x"></use>
-      </svg>
-    </button> -->
-    
+
     <div class="header-mobile-menu-list list">
-      <p class="header-mobile-menu-item">
+      <!-- <p class="header-mobile-menu-item"> -->
         <a href="" class="header-mobile-menu-link link"><span class="menu-list-mob">Home</span></a>
       <div class="chevron">
-      <p class="chevron header-mobile-menu-item">
+      <!-- <p class="chevron header-mobile-menu-item"> -->
         <a href="" class="header-mobile-menu-link link">Favorite</a>
-        <button
-      type="button"
-      class="mobile-menu-close-btn js-close-menu"
-    >
-      <svg class="mobile-menu-close-icon" width="32" height="32">
+        <svg id="sprite" width="32" height="32">
         <use href="./img/sprite.svg#icon-chevron-down"></use>
       </svg>
-    </button>
+        </div>
+    <div id="hiddenDiv" class="hidden-list" style="display: none;">
+        <!-- Содержимое div блока -->
+        <a href="./favCocktails.html" class="header-mobile-list link">Favorite cocktails</a>
+    <a href="./ingredients.html" class="header-mobile-list link">Favorite ingredients</a>
       </div>
-    
-       <!-- <select onchange="window.location.href=this.options[this.selectedIndex].value">
-    <option VALUE="./favCocktails.html">Favorite</option>
-    <option VALUE="./favCocktails.html">Favorite cocktails</option>
-    <option VALUE="./ingredients.html">Favorite ingredients</option>
-</select> -->
-    
+       
 </div>
 <svg class="star" width="" height="">
         <use href="./img/sprite.svg#icon-star_combo_7"></use>
