--- a/src/css/header.css
+++ b/src/css/header.css
@@ -19,6 +19,24 @@
 .nav-link:focus {
   color: #747bff;
 } */
+
+
+
+
+
+/* #hiddenDiv {
+    background-color: #f0f0f0;
+    padding: 10px;
+    border: 1px solid #ccc;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+} */
+
+
+.menu-list-desktop{
+  display: none;
+}
 .header-menu{
   display: none;
 }
@@ -62,6 +80,7 @@ color: #FDFDFF
   visibility: hidden;
 }
 .page-header-container {
+  
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -137,7 +156,7 @@ align-items: center;
 .header-mobile-menu-list {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 14px;
   text-align: center;
   margin-top: 180px;
   padding-right: 116px;
@@ -146,11 +165,13 @@ align-items: center;
 }
 
 .header-mobile-menu-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: -0.02em;
-  color: #ffffff;
+ color: #FDFDFF;
+font-family: Poppins;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; /* 133.333% */
+letter-spacing: 0.36px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-mobile-menu-link:hover,
@@ -161,8 +182,24 @@ align-items: center;
 .chevron{
   display: flex;
   align-items: center;
+  gap: 4px;
+  margin: auto;
 }
-
+.header-mobile-list{
+  color: rgba(253, 253, 255, 0.50);
+font-family: Poppins;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 18px; /* 128.571% */
+letter-spacing: 0.28px;
+}
+.hidden-list{
+  margin-top: 4px;
+  flex-direction: column;
+  gap: 8px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .star{
   display: none;
 }
@@ -308,6 +345,18 @@ input:checked + .slider:before {
 
 /* desktop */
 @media screen and (min-width: 1280px) {
+  .menu-list-desktop{
+  display: flex;
+  gap: 4px;
+}
+  .header-mobile-menu-link {
+    color: #242424;
+font-size: 16px;
+font-weight: 400;
+line-height: 18px; /* 112.5% */
+letter-spacing: 0.32px;
+
+  }
   .page-header {
   padding-top: 29px;
 }
@@ -317,7 +366,7 @@ input:checked + .slider:before {
   height: 28px;
   width: 28px;
   left: 2px;
-  bottom: 0px;
+  bottom: 1px;
   background-color: #9CDFDF;
   -webkit-transition: .4s;
   transition: .4s;
@@ -346,16 +395,16 @@ input:focus + .slider {
   }
   .slider.round {
   border-radius: 34px;
-  border: 3px solid #000000;
+  border: 1px solid #000000;
 }
-  .page-header-container{
-  
-justify-content: space-between;
-  }
+input:checked + .slider:before {
+  transform: translateX(30px);
+}
   .header-menu{
   display: block;
 }
   .header-logo {
+    /* padding-left: 570px; */
     font-size: 18px;
     line-height: 1.11;
   }
@@ -379,12 +428,12 @@ justify-content: space-between;
     align-items: center;
     column-gap: 18px;
   }
-  .header-social-link {
+  /* .header-social-link {
     display: flex;
     justify-content: center;
     align-items: center;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+  } */
 
   .header-menu-link {
     font-weight: 500;
