--- a/src/css/header.css
+++ b/src/css/header.css
@@ -43,6 +43,16 @@
 .header-list-menu{
   display: none;
 }
+.mobile-desktop-menu{
+display: none;  
+align-items: center;
+}
+.home-link{
+  padding-right: 28px;
+}
+.favorite-link{
+  padding-right: 4px;
+}
 .header-logo-span {
   color: #000000;
   font-family: Poppins;
@@ -194,12 +204,12 @@ font-weight: 400;
 line-height: 18px; /* 128.571% */
 letter-spacing: 0.28px;
 }
-.hidden-list{
-  margin-top: 4px;
-  flex-direction: column;
-  gap: 8px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.header-mobile-list:hover,
+.header-mobile-list:focus
+{
+color: #FDFDFF;
 }
+
 .star{
   display: none;
 }
@@ -345,10 +355,35 @@ input:checked + .slider:before {
 
 /* desktop */
 @media screen and (min-width: 1280px) {
+  
+  .mobile-desktop-menu{
+    display: flex;
+  }
+  #hiddenDiv {
+   border-radius: 16px;
+background: #7E8FDD;
+padding: 18px 24px;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 8px;
+    position: fixed;
+    top: 68px;
+    left: 210px;
+}
+  
+  .chevron-desing{
+    fill: #7E8FDD ;
+  }
+  
+  
+  
   .menu-list-desktop{
   display: flex;
   gap: 4px;
 }
+
+
   .header-mobile-menu-link {
     color: #242424;
 font-size: 16px;
