--- a/src/partials/hero/hero.html
+++ b/src/partials/hero/hero.html
@@ -66,7 +66,7 @@
             media="(max-width:767.9px)"
           />
 
-          <img src="./img/hero/elements-mobile.png" alt="girl with cocktail" />
+          <img src="./img/hero/girl-mobile.png" alt="girl with cocktail" />
         </picture>
       </div>
     </div>
