--- a/src/partials/modalCocktails/modalCocktails.html
+++ b/src/partials/modalCocktails/modalCocktails.html
@@ -6,7 +6,7 @@
       data-modal-close
       aria-label="close"
     >
-      <svg class="modal__icon" width="" height="">
+      <svg class="modal__icon" width="18" height="18">
         <use href="./img/sprite.svg#icon-close"></use>
       </svg>
     </button>
