--- a/src/css/hero/search-hero.css
+++ b/src/css/hero/search-hero.css
@@ -121,7 +121,7 @@
   border: 2px solid var(--main-color);
 
   /* text */
-  color: rgba(36, 36, 36, 0.2);
+
   font-family: Poppins;
   font-size: 14px;
   font-style: normal;
@@ -129,7 +129,9 @@
   line-height: normal;
   padding-left: 42px;
 }
-
+.text-input.placeholder {
+  color: rgba(36, 36, 36, 0.2);
+}
 @media screen and (min-width: 375px) {
   .search-js {
     width: 335px;
