--- a/src/css/hero/hero.css
+++ b/src/css/hero/hero.css
@@ -100,6 +100,16 @@
     letter-spacing: 0.28px;
     text-transform: uppercase;
   }
+  .block-page-hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-top: 50px;
+    margin-bottom: 150px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -206,6 +216,16 @@
     letter-spacing: 0.32px;
     text-transform: uppercase;
   }
+  .block-page-hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-top: 50px;
+    margin-bottom: 150px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media screen and (min-width: 1280px) {
@@ -251,5 +271,15 @@
     width: 219px;
     font-size: 18px;
     letter-spacing: 0.36px;
+  }
+  .block-page-hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-top: 50px;
+    margin-bottom: 150px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
